--- a/exec/이용시나리오/배포 가이드.md
+++ b/exec/이용시나리오/배포 가이드.md
@@ -26,11 +26,18 @@
     7. docker ps로 실행 확인
 
 
+### Frontend 의존성 설정
+
+| 종류                  | 버전  |
+| --------------------- | ----- |
+| Vue                   | 2.6.11|
+| Vuetify               | 2.2.23|
+
 
 ### Frontend 배포 
 
 ```
-1. npm run buil 로 buil  => dist 폴더 생성 
+1. npm run buil 로 build  => dist 폴더 생성 
 2. 서버에 dist 폴더 업로드 
 3. /etc/nginx/sites-enabled/default 파일에 dist 폴더 경로 추가 & 포트 번호 수정(선택)
 ```
