--- a/exec/이용시나리오/배포 가이드.md
+++ b/exec/이용시나리오/배포 가이드.md
@@ -70,3 +70,21 @@ docker run -it -d --rm --name nginx_new -p 80:80 -v /home/ubuntu/front/dist/:/us
 5. sudo docker ps 로 실행 확인
 ```
 
+
+### Hadoop cluster
+| 종류                  | 버전  |
+| --------------------- | ----- |
+| Hadoop                | 3.3.1 |
+| Hive                  | 3.1.2 |
+| Spark                 | 3.2.1 |
+| Zookeeper             | 3.6.3 |
+| Kafka                 | 3.1.0 |
+| Sqoop                 | 1.4.7 |
+| Airflow               | 2.2.4 |
+
+### AWS 서버
+| 종류                  | 버전  |
+| --------------------- | ----- |
+| Hadoop                | 3.3.1 |
+| Spark                 | 3.2.1 |
+
